# diariodeleon-scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
diariodeleon/: items.py  middlewares.py  pipelines.py  settings.py
diariodeleon/AI_module/: News_Parser_Controllers.py  news_analysis_pipeline.py  prompts.py  temp_analysis.py  utils.py
diariodeleon/spiders/: abs.py  diariodeleon.py
